# WindEffects

./: .gitignore  .gitmodules  CHANGELOG.MD  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IgniteBT.SDKs.json  LICENSE  README.md  SECURITY.md  WindEffects.engine  chec.py  crash_test_out.txt  ecstest_err.txt  ecstest_out.txt  editor_stdout.txt  fix_includes2.py  run.ps1  temp.cpp  test.hlsl  test_shader.hlsl  vswhere.ps1  we  we.bat  we.cmd  we.ps1
Engine/Source/Editor/Application/: Application.Build.cs  CMakeLists.txt  EditorApplication.cpp  EditorApplication.h  EditorApplication.hpp  EngineApplication.cpp  EngineApplication.h  EngineApplication.hpp
Engine/Source/Editor/Application/Private/: ApplicationModule.cpp  EditorLayoutController.cpp  EditorLayoutPersistence.cpp  EditorModeController.cpp  EditorPanelController.cpp  EditorPreferences.cpp  EditorRegistry.cpp  EditorToolsRegistry.cpp
Engine/Source/Editor/Application/Private/Core/: Animation.cpp  DPIContext.cpp  DockTabBrandRegistry.cpp  DockTabIconRegistry.cpp  EventSystem.cpp  Icon.cpp  IconManager.cpp  PaintContext.cpp  Theme.cpp  Widget.cpp
Engine/Source/Editor/Application/Private/Layout/: Box.cpp  DockSpace.cpp  OverlayManager.cpp  ScrollLayout.cpp  Spacer.cpp  Splitter.cpp
Engine/Source/Editor/Application/Private/Panels/: OutputLogPanel.cpp
Engine/Source/Editor/Application/Private/Rendering/: EditorCompositor.cpp  FontAtlas.cpp  FontImportService.cpp  IconRenderer.cpp  OverlayRenderer.cpp  TextUIService.cpp  UIBatchGenerator.cpp  UICommandBuffer.cpp  UICompositor.cpp  UIGeometryCache.cpp  UIPipelineAudit.cpp  UIRenderer.cpp  UIRenderer2.cpp  UIStateManager.cpp  UITextureAtlasManager.cpp  (+4 more)
Engine/Source/Editor/Application/Public/: EditorLayoutController.h  EditorLayoutController.hpp  EditorLayoutPersistence.h  EditorLayoutPersistence.hpp  EditorModeController.h  EditorModeController.hpp  EditorPanelController.h  EditorPanelController.hpp  EditorPreferences.h  EditorPreferences.hpp  EditorRegistry.h  EditorRegistry.hpp  EditorToolsRegistry.h  EditorToolsRegistry.hpp  ViewportNavigationSettings.h  ViewportNavigationSettings.hpp
Engine/Source/Editor/Application/Rendering/: README.md
Engine/Source/Editor/ContentBrowser/: CMakeLists.txt  ContentBrowser.Build.cs
Engine/Source/Editor/ContentBrowser/Private/: AssetImportBridge.cpp  ContentBrowserModule.cpp  ContentBrowserPanel.cpp
Engine/Source/Editor/ContentBrowser/Public/: ContentBrowserApi.h
Engine/Source/Programs/IgniteBT/: CMakeLists.txt  Directory.Build.props  IgniteBT.csproj  Main.cpp  Program.cs
Engine/Source/Programs/IgniteBT/Benchmarks/: BuildBenchmark.cs
Engine/Source/Programs/IgniteBT/BuildCache/: BuildCache.cs
Engine/Source/Programs/IgniteBT/BuildDatabase/: BuildDatabase.cs
Engine/Source/Programs/IgniteBT/BuildGraph/: BuildGraph.cpp  BuildGraph.cs  BuildGraph.hpp
Engine/Source/Programs/IgniteBT/BuildSystem/: BuildLayout.cs  ModuleRules.cs  OutputLayout.cs
Engine/Source/Programs/IgniteBT/CLI/: Command.cpp  Command.hpp  CommandLineParser.cs
Engine/Source/Programs/IgniteBT/Commands/: BuildCommand.cs  CleanCommand.cs  DoctorCommand.cs  GraphCommand.cs  ModulesCommand.cs  PackageCommand.cs  PluginCommand.cs  ProjectCommand.cs  RebuildCommand.cs  RunCommand.cs  SdkCommand.cs  SetupCommand.cs  VersionCommand.cs
Engine/Source/Programs/IgniteBT/Compiler/: ClangCompiler.cs  GCCCompiler.cs  ICompiler.cs  MSVCCompiler.cs
Engine/Source/Programs/IgniteBT/Configuration/: Configuration.cpp  Configuration.hpp
Engine/Source/Programs/IgniteBT/Core/: Types.cpp  Types.hpp
Engine/Source/Programs/IgniteBT/Daemon/: DaemonClient.cs  DaemonHost.cs  DaemonProtocol.cs  DaemonServer.cs  IgniteBTDaemon.cs
Engine/Source/Programs/IgniteBT/Dependencies/: DependencyResolver.cs
Engine/Source/Programs/IgniteBT/Dependency/: DependencyScanner.cs
Engine/Source/Programs/IgniteBT/DependencyAnalyzer/: DependencyAnalyzer.cpp  DependencyAnalyzer.hpp
Engine/Source/Programs/IgniteBT/Distributed/: INetworkObjectCache.cs  IRemoteExecutor.cs  IRemoteScheduler.cs
Engine/Source/Programs/IgniteBT/Docs/: ARCHITECTURE.md  COMMANDS.md  CONFIGURATION.md  GETTING-STARTED.md  README.md
Engine/Source/Programs/IgniteBT/Launcher/: BootstrapLauncher.cs  BootstrapManifest.cs  EngineDescriptor.cs  EngineInstallation.cs  IgniteBTLauncher.cs  IniFile.cs  build_launcher.ps1
Engine/Source/Programs/IgniteBT/Linker/: GNULinker.cs  ILinker.cs  LLDLinker.cs  MSVCLinker.cs
Engine/Source/Programs/IgniteBT/Logging/: Logger.cpp  Logger.hpp
Engine/Source/Programs/IgniteBT/ModuleDiscovery/: ModuleDiscovery.cs
Engine/Source/Programs/IgniteBT/ModuleManager/: ModuleManager.cpp  ModuleManager.hpp
Engine/Source/Programs/IgniteBT/Platform/: Platform.cpp  Platform.hpp  WindowsHeaders.hpp
Engine/Source/Programs/IgniteBT/SDK/: ISDKProvider.cs  SDKConfiguration.cs  SDKDatabase.cs  SDKException.cs  SDKInfo.cs  SDKManager.cs  SDKResolver.cs  SDKResult.cs  SDKValidator.cs
Engine/Source/Programs/IgniteBT/Scheduler/: TaskScheduler.cs
Engine/Source/Programs/IgniteBT/Source/: Directory.Build.props  IgniteBT.csproj  Program.cs
Engine/Source/Programs/IgniteBT/TargetManager/: TargetManager.cpp  TargetManager.hpp
Engine/Source/Programs/IgniteBT/Tests/: AdaptiveUnityFilterConcurrencyTests.cs  FastNoOpProbeTests.cs  IgniteBT.Tests.csproj  JobGraphTests.cs  SqliteBuildDatabaseTests.cs  UnityBuildPlannerTests.cs
Engine/Source/Programs/IgniteBT/ThreadPool/: WorkStealingThreadPool.cs
Engine/Source/Programs/IgniteBT/Toolchain/: SDKConfig.cs  SDKDetector.cs  ToolchainDetector.cs
Engine/Source/Runtime/Core/: AssetRegistry.cpp  AssetRegistry.h  AssetRegistry.hpp  CMakeLists.txt  Core.Build.cs  Localization.cpp  Localization.h  Localization.hpp  ModuleManager.h  ModuleManager.hpp  PluginManager.cpp  PluginManager.hpp
Engine/Source/Runtime/Core/Private/: AssetRegistry.cpp  DelayLoadBootstrap.cpp  Environment.cpp  FrameCounter.cpp  IgniteBTInvoker.cpp  Localization.cpp  Logger.cpp  ModuleInitializer.cpp  Paths.cpp  PluginManager.cpp  RegisteredModuleManager.cpp  StartupValidator.cpp
(+2318 files in other folders)
